# digitalocean-inventory

./: .bandit.yml  .bumpversion.cfg  .cspell.json  .quickdocs.yml  .template.yml  .travis.yml  Gruntfile.js  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: review.yml
digitalocean_inventory/: __init__.py  __main__.py  exceptions.py  formatter.py  inventory.py  manager.py
docs/: conf.py  index.rst
docs/sphinx/: conf.py
docs/static/: README.html
src/: __init__.py  __main__.py  exceptions.py  formatter.py  formatters.py  inventory.py  manager.py
src/models/: client.py  formatter.py  inventory.py  manager.py
src/services/: cli.py  environ.py  exceptions.py  ssh_keys.py
src/utils/: defaults.py  strings.py
test/: test_formatter.py
tests/: conftest.py  test_features.py  test_formatter.py  test_services.py  test_utils.py
tests/features/: inventory.feature  ssh_keys.feature  tags.feature
tests/fixtures/: commands.py  digitalocean.py  ssh_keys.py
tests/fixtures/bdd/: commands.py  digitalocean.py  validation.py
