[metadata]
name = digitalocean_inventory
version = 1.0.0
description = An ansible dynamic inventory for DigitalOcean
url = https://github.com/JoelLefkowitz/digitalocean-inventory
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = Python
frameworks = Ansible
status = In development
project_type = Published on pypi

keywords = ansible, dynamic, inventory
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

# Exclude test packages
[options.packages.find]
exclude =
    tests
    docs
