[metadata]
name = digitalocean_inventory
version = 1.1.0

description = An Ansible dynamic inventory for DigitalOcean.
url = https://github.com/JoelLefkowitz/digitalocean-inventory

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    ansible
    dynamic
    inventory
    digitalocean

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = Stable
homepage = https://digitalocean-inventory.readthedocs.io

languages = 
    Python

frameworks = 
    Ansible

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    